<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    android:elevation="5dp"
    android:padding="16dp"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:contentDescription="@string/root_view">

        <TextView
            android:id="@+id/exercise_name"
            style="@style/header_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/exercise_name"
            app:layout_constraintEnd_toEndOf="@+id/exercise_image"
            app:layout_constraintStart_toStartOf="@+id/exercise_image"
            app:layout_constraintTop_toBottomOf="@+id/exercise_image" />

        <ImageView
            android:id="@+id/exercise_image"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:background="@color/colorAccent"
            android:contentDescription="@string/exercise_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/exercise_number"
            style="@style/box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/exercise_number"
            app:layout_constraintEnd_toEndOf="@id/exercise_image"
            app:layout_constraintTop_toTopOf="@id/exercise_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

